tests/gabc-dump/should-fail/bad-hepisema-2.gabc
name: bad horizontal episema (2);
%%
(c4_)
